--- a/app/src/main/res/layout/activity_add_post_faculty.xml
+++ b/app/src/main/res/layout/activity_add_post_faculty.xml
@@ -81,11 +81,11 @@
         android:id="@+id/post_log"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:textSize="20sp"
         android:layout_alignParentBottom="true"
         android:background="@null"
-        android:hint="Post Log"
-        android:paddingLeft="20dp"
-        android:padding="5dp"/>
+        android:hint="Faculty space"
+        android:padding="5dp"
+        android:layout_marginHorizontal="20dp"
+        android:textSize="20sp" />
 
 </RelativeLayout>
