--- a/app/src/main/res/layout/activity_add_post_faculty.xml
+++ b/app/src/main/res/layout/activity_add_post_faculty.xml
@@ -60,7 +60,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:layout_marginRight="10dp"
-                android:hint="Faculties"
+                android:hint="Faculty"
                 android:textColor="@color/black"
                 android:textSize="20sp"/>
         </LinearLayout>
